# options-trading

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-daily-brief.md  spec-fmp-client.md  spec-idea-singleticker.md  spec-lifecycle-persistence.md  spec-orats-client.md  spec-pflichtregeln-gate.md  spec-scan-universe.md
_bmad-output/planning-artifacts/: implementation-readiness-report-2026-04-27.md  prd.md  shakedown-friction-log-2026-04-29.md  shakedown-plan-2026-04-29.md
config/: settings.toml
docs/: CSP-Flywheel-Strategie: Deep-Dive-Analyse.md  CSP-Strategie.md  CSP-Watchlist.csv  Hormuz-Makro-Overlay.md  MakroÃ¶konomischer Kontext.md  Optionsstrategien-Kompendium.md  Portfolio-Uebersicht.csv  portfolio übersicht.md
docs/archive/: Projekt-Brief-2026-04-27.md  README.md
src/csp/: __init__.py  _logging.py  config.py  daily_brief.py  exceptions.py  export.py  health.py  idea.py  lifecycle_api.py  macro.py  portfolio.py  scan.py
src/csp/clients/: __init__.py  fmp.py  orats.py
src/csp/filters/: __init__.py  pflichtregeln.py
src/csp/lifecycle/: __init__.py  state_machine.py
src/csp/models/: __init__.py  core.py  daily_brief.py  idea.py  trade.py
src/csp/persistence/: __init__.py  db.py  ideas.py  trades.py
src/csp/persistence/migrations/: 001_initial.sql
src/csp/strategies/: __init__.py  csp.py
src/csp/ui/: __init__.py  formatters.py
tests/: conftest.py  test_cassette_hygiene.py  test_daily_brief.py  test_export.py  test_fmp_client.py  test_format_fbg_mail.py  test_formatters.py  test_idea.py  test_lifecycle_api.py  test_logging_redaction.py  test_macro.py  test_models.py  test_now_fixture_helpers.py  test_orats_client.py  test_persistence.py  test_pflichtregeln.py  test_portfolio.py  test_scan.py  test_settings.py  test_state_machine.py
tests/cassettes/fmp/: historical_VIX_20260424.yaml  quote_VIX.yaml
tests/cassettes/orats/: cores_NOW.yaml  hist_cores_NOW_20260424.yaml  hist_strikes_NOW_20260424.yaml
tests/fixtures/: now_2026_04_24.py
