[project]
name = "csp"
version = "0.1.0"
description = "German Cash-Secured-Put options-trading research library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-vcr>=1.0.2",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["loguru"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=csp",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-m",
    "not recording",
]
markers = [
    "now_regression: NOW-78 (2026-04-24) regression anchor",
    "recording: live ORATS HTTP — opt-in via `pytest -m recording --vcr-record=once`",
]

[tool.coverage.run]
source = ["csp"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
